# Code-Scraps

./: .gitignore  README.md
15_problem/: .gitignore  CMakeLists.txt  README.md  main.cpp
Rock_Paper_Scissors/: CMakeLists.txt  README.md  main.cpp  term.cpp  term.hpp
Shoot_the_Xs/: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  version.config
Shoot_the_Xs/src/: CMakeLists.txt  characters.cpp  characters.hpp  main.cpp  typedefs.hpp
Tower_of_Hanoi/: CMakeLists.txt  README.txt  main.cpp  typedefs.hpp
Yahtzee/: CMakeLists.txt  README.md  main.cpp  typedefs.hpp
word_censor/: .gitignore  CMakeLists.txt  README.md  bad_words.txt  censor.cpp  censor.hpp  main.cpp
